sfdc-deploy/force-app/main/default/objects/Account/fields/Bank_Account_Last4__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Last4__c</fullName>
    <description>Last 4 of bank account number for display/audit. Full account # and routing # are NEVER stored in SF — they live encrypted in Supabase only.</description>
    <label>Bank Account Last 4</label>
    <length>4</length>
    <type>Text</type>
</CustomField>