sfdc-deploy/force-app/main/default/objects/Account/fields/Hours_of_Operation_JSON__c.field-meta.xml
<CustomField>
    <fullName>Hours_of_Operation_JSON__c</fullName>
    <description>Stringified JSON of weekly hours. Format: {"mon":{"open":"08:00","close":"22:00","closed":false},...}. Single field instead of 14 (mon_open, mon_close, etc.) — same pattern as NAMSYS_Customer_Name_Grouping__c.</description>
    <label>Hours of Operation (JSON)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>