sfdc-deploy/force-app/main/default/objects/Account/fields/Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Launch_Date__c</fullName>
    <description>The confirmed first-pickup date. Used for ops scheduling and live reporting. May be blank during onboarding if retailer is in Awaiting Pickup status.</description>
    <label>Launch Date</label>
    <type>Date</type>
</CustomField>