sfdc-deploy/force-app/main/default/objects/Account/fields/Loading_Dock_Notes__c.field-meta.xml
<CustomField>
    <fullName>Loading_Dock_Notes__c</fullName>
    <description>Driver-facing notes about access, parking, dock location, gate codes (no combos).</description>
    <label>Loading Dock Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>