sfdc-deploy/force-app/main/default/objects/Account/fields/NST_Temp_Code__c.field-meta.xml
<CustomField>
    <fullName>NST_Temp_Code__c</fullName>
    <description>Magic-link claim code emitted when sales hands off the account to onboarding. Cleared on first successful claim.</description>
    <externalId>true</externalId>
    <label>NST Temp Code</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
    <caseSensitive>true</caseSensitive>
</CustomField>