sfdc-deploy/force-app/main/default/objects/Account/fields/Onboarding_Status__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Status__c</fullName>
    <description>Tracks retailer progression through the 7-step onboarding flow. Distinct from Account_Stage__c so Sales doesn't lose their funnel view.</description>
    <label>Onboarding Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Claimed</fullName>
            </value>
            <value>
                <fullName>Profile Complete</fullName>
            </value>
            <value>
                <fullName>Setup Complete</fullName>
            </value>
            <value>
                <fullName>Trained</fullName>
            </value>
            <value>
                <fullName>Invoicing Configured</fullName>
            </value>
            <value>
                <fullName>Awaiting Pickup</fullName>
            </value>
            <value>
                <fullName>Live</fullName>
            </value>
            <value>
                <fullName>Stalled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>