sfdc-deploy/force-app/main/default/objects/Account/fields/Pickup_Window__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Window__c</fullName>
    <description>Preferred time-of-day window for pickup. Pairs with Pick_up_frequency__c (which already exists).</description>
    <label>Pickup Window</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Morning</fullName><default>false</default><label>Morning (6a-12p)</label></value>
            <value><fullName>Afternoon</fullName><default>false</default><label>Afternoon (12p-5p)</label></value>
            <value><fullName>Evening</fullName><default>false</default><label>Evening (5p-10p)</label></value>
            <value><fullName>Overnight</fullName><default>false</default><label>Overnight (10p-6a)</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>