sfdc-deploy/force-app/main/default/objects/Account/fields/Timezone__c.field-meta.xml
<CustomField>
    <fullName>Timezone__c</fullName>
    <description>Store timezone. IANA values for unambiguous DST handling.</description>
    <label>Timezone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value><fullName>America/New_York</fullName><default>false</default><label>Eastern (America/New_York)</label></value>
            <value><fullName>America/Chicago</fullName><default>false</default><label>Central (America/Chicago)</label></value>
            <value><fullName>America/Denver</fullName><default>false</default><label>Mountain (America/Denver)</label></value>
            <value><fullName>America/Phoenix</fullName><default>false</default><label>Mountain - no DST (America/Phoenix)</label></value>
            <value><fullName>America/Los_Angeles</fullName><default>false</default><label>Pacific (America/Los_Angeles)</label></value>
            <value><fullName>America/Anchorage</fullName><default>false</default><label>Alaska (America/Anchorage)</label></value>
            <value><fullName>Pacific/Honolulu</fullName><default>false</default><label>Hawaii (Pacific/Honolulu)</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>