sfdc-deploy/force-app/main/default/objects/Account/fields/Voided_Check_URL__c.field-meta.xml
<CustomField>
    <fullName>Voided_Check_URL__c</fullName>
    <description>Supabase storage URL pointing to the uploaded voided check image. OCR-extracted routing/account stored only in onboarding state, never in SF.</description>
    <label>Voided Check URL</label>
    <type>Url</type>
</CustomField>